--- a/css/styles.css
+++ b/css/styles.css
@@ -546,22 +546,10 @@ img {
 
 /* region modal */
 
-.backdrop {
-  background-color: rgba(46, 47, 66, 0.4);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* .backdrop.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
-} */
+}
 
 .modal {
   position: relative;
