--- a/css/styles.css
+++ b/css/styles.css
@@ -496,38 +496,33 @@ img {
   box-shadow: rgba(0, 0, 0, 0.15);
   width: 264px;
   height: 40px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 16px;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
 }
 
 .input-footer:placeholder-shown {
   color: rgba(255, 255, 255, 1);
-  font-family: inherit;
-  font-size: 12px;
-  font-weight: 400;
-  letter-spacing: 0.04em;
-  padding-top: 8px;
-  padding-left: 16px;
 }
 
 .button-subscribe {
-  position: relative;
   display: flex;
+  justify-content: center;
   align-items: center;
   color: rgba(255, 255, 255, 1);
   background-color: rgba(77, 90, 229, 1);
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   border-radius: 4px;
-  margin-left: 24px;
-  margin-top: 40px;
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   border: none;
   padding-left: 24px;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -537,31 +532,55 @@ img {
 }
 
 .icon-subscribe {
-  position: absolute;
-  right: 24px;
-  top: 10px;
+  margin-left: 16px;
   fill: rgba(255, 255, 255, 1);
+}
+
+.footer-sub-form {
+  display: flex;
+  gap: 24px;
 }
 /* #endregion  */
 
 /* region modal */
 
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.4);
 }
 
+/* .backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+} */
+
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   background-color: rgba(252, 252, 252, 1);
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-container {
+  margin-bottom: 8px;
+}
+
+.modal-comment {
+  margin-bottom: 16px;
 }
 
 .btn-close-modal {
@@ -579,7 +598,7 @@ img {
   border-radius: 50%;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-close-modal:hover,
@@ -590,6 +609,7 @@ img {
 
 .close-button-icon {
   fill: rgba(46, 47, 66, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-close-modal:hover .close-button-icon,
@@ -618,6 +638,7 @@ img {
 }
 
 .info-contact-modal {
+  display: flex;
   color: rgba(142, 143, 153, 1);
   width: 100%;
   display: flex;
@@ -635,9 +656,19 @@ img {
   border-radius: 4px;
   width: 100%;
   height: 40px;
+  background-color: transparent;
+  outline: transparent;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-control:focus {
+  border-color: #4d5ae5;
 }
 
 .input-textarea {
+  background-color: transparent;
+  outline: transparent; 
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
@@ -648,7 +679,12 @@ img {
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  padding-bottom: 4px;
+  padding: 8px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-textarea:focus {
+  border-color: #4D5AE5; 
 }
 
 .input-textarea:placeholder-shown {
@@ -690,7 +726,7 @@ img {
 }
 
 .privacy-span {
-  display: inline-flex;
+  display: inline-block;
   align-items: center;
   justify-content: center;
   width: 16px;
@@ -700,13 +736,10 @@ img {
   fill: transparent;
   margin-left: 8px;
   cursor: pointer;
-  transition: border background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: ransition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.check-icon:checked + .label > .privacy-span {
+.privacy-span:checked + .label > .privacy-span {
   background-color: rgba(64, 75, 191, 1);
   border: none;
   color: #f4f4fd;
@@ -730,7 +763,7 @@ img {
   text-align: center;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   cursor: pointer;
   margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -740,4 +773,5 @@ img {
 .button-modal:focus {
   background-color: rgba(64, 75, 191, 1);
 }
+
 /* endregion */
