--- a/css/styles.css
+++ b/css/styles.css
@@ -551,6 +551,8 @@ img {
   top: 0;
   left: 0;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .backdrop.is-hidden {
@@ -638,7 +640,7 @@ img {
 }
 
 .info-contact-modal {
-  display: flex;
+  display: block;
   color: rgba(142, 143, 153, 1);
   width: 100%;
   display: flex;
@@ -668,7 +670,7 @@ img {
 
 .input-textarea {
   background-color: transparent;
-  outline: transparent; 
+  outline: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
@@ -684,7 +686,7 @@ img {
 }
 
 .input-textarea:focus {
-  border-color: #4D5AE5; 
+  border-color: #4d5ae5;
 }
 
 .input-textarea:placeholder-shown {
@@ -706,13 +708,20 @@ img {
   left: 16px;
   top: 8px;
   color: rgba(46, 47, 66, 1);
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-icon:focus {
+  fill: #4d5ae5;
 }
 
 .user-privacy {
   margin-bottom: 24px;
 }
 
-.privacy-title {
+.privacy-checkbox {
   display: flex;
   color: rgba(142, 143, 153, 1);
   font-family: 'Roboto', sans-serif;
@@ -726,7 +735,7 @@ img {
 }
 
 .privacy-span {
-  display: inline-block;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   width: 16px;
@@ -736,10 +745,12 @@ img {
   fill: transparent;
   margin-left: 8px;
   cursor: pointer;
-  transition: ransition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.privacy-span:checked + .label > .privacy-span {
+.privacy-checkbox:checked + .privacy-checkbox > .privacy-span {
   background-color: rgba(64, 75, 191, 1);
   border: none;
   color: #f4f4fd;
