--- a/css/styles.css
+++ b/css/styles.css
@@ -701,6 +701,7 @@ img {
 
 .form-items {
   position: relative;
+  display: block;
 }
 
 .form-icon {
@@ -750,7 +751,7 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.privacy-checkbox:checked + .privacy-checkbox > .privacy-span {
+.input[type='checkbox']:checked > .privacy-checkbox + .check-icon {
   background-color: rgba(64, 75, 191, 1);
   border: none;
   color: #f4f4fd;
