--- a/css/styles.css
+++ b/css/styles.css
@@ -725,7 +725,7 @@ img {
   margin-bottom: 24px;
 }
 
-.privacy-checkbox {
+.form-checkbox-label {
   display: flex;
   color: rgba(142, 143, 153, 1);
   font-family: 'Roboto', sans-serif;
@@ -738,26 +738,30 @@ img {
   cursor: pointer;
 }
 
-.privacy-span {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+.check {
   width: 16px;
   height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   fill: transparent;
-  margin-left: 8px;
-  cursor: pointer;
+  background-color: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 8px;
 }
 
-.input[type='checkbox']:checked > .privacy-checkbox + .check-icon {
-  background-color: rgba(64, 75, 191, 1);
+.checkbox-input:checked + .form-checkbox-label > .check {
+  background-color: #404bbf;
   border: none;
-  color: #f4f4fd;
+  fill: #f4f4fd;
+}
+
+.checkbox-input:focus + .form-checkbox-label > .check {
+  border: #404bbf;
 }
 
 .privacy-policy {
