--- a/css/styles.css
+++ b/css/styles.css
@@ -710,14 +710,14 @@ img {
   position: absolute;
   left: 16px;
   top: 8px;
-  color: rgba(46, 47, 66, 1);
+  fill: rgba(46, 47, 66, 1);
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-icon:focus {
-  fill: #4d5ae5;
+  fill: rgba(77, 90, 229, 1);
 }
 
 .user-privacy {
