--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,23 @@ img {
 }
 
 .container {
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  min-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    width: 1158px;
+    padding: 0 15px;
+  }
 }
 
 .visually-hidden {
@@ -119,6 +132,12 @@ img {
   padding: 24px 0;
 }
 
+@media screen and (max-width: 767px) {
+  .header-nav {
+    display: none;
+  }
+}
+
 .header-link {
   color: rgba(46, 47, 66, 1);
   line-height: 1.5;
@@ -154,15 +173,28 @@ img {
 }
 
 .header-address {
-  display: flex;
   align-items: center;
-  gap: 40px;
   list-style-type: none;
-  margin: 0;
+}
+
+@media screen and (min-width: 1158px) {
+  .header-address {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: flex;
+    gap: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-address {
+    display: none;
+  }
 }
 
 .address {
   font-style: normal;
+  margin-left: auto;
 }
 
 .header-address-contact > a {
@@ -203,14 +235,29 @@ img {
 
 .hero-title {
   color: rgba(255, 255, 255, 1);
-  font-size: 56px;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
+  line-height: 1.11;
   text-align: center;
   list-style-type: none;
-  max-width: 496px;
-  margin: 0 0 48px 0;
+  max-width: 216px;
+  margin: 0 auto 72px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    max-width: 496px;
+    margin: 0 auto 36px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .hero__title {
+    margin: 0 auto 48px;
+  }
 }
 
 .button-order {
@@ -241,27 +288,104 @@ img {
 
 /* #region advantages */
 
-.advantages-section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+@media screen and (max-width: 1157px) {
+  .advantages-section {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .advantages-section {
+    padding: 120px 0;
+  }
 }
 
 .advantages-list {
   display: flex;
-  justify-content: space-between;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 72px;
+  column-gap: 24px;
 }
 
-.advantages-items {
-  width: calc((100% - 72px) / 4);
-  margin-right: 24px;
-  padding-left: 0;
+@media screen and (max-width: 767px) {
+  .advantages-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages_list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .advantages-list {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages-items {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .advantages-items {
+    width: calc((100% - 72px) / 4);
+  }
 }
 
 .advantages-items:last-child {
   margin-right: 0;
+}
+
+.second-title-adv {
+  color: rgba(46, 47, 66, 1);
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .second-title-adv {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .second-title-adv {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+}
+
+.main-text-adv {
+  color: rgba(46, 47, 66, 1);
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: start;
+}
+
+@media screen and (min-width: 1158px) {
+  .main-text-adv {
+    font-weight: 400;
+  }
 }
 
 .advantages-icons {
@@ -276,6 +400,12 @@ img {
   margin-bottom: 8px;
 }
 
+@media screen and (max-width: 1157px) {
+  .advantages-icons {
+    display: none;
+  }
+}
+
 .adv-icon {
   width: 64px;
   height: 64px;
@@ -287,28 +417,69 @@ img {
 
 .team-section {
   background-color: rgba(244, 244, 253, 1);
-  padding-top: 120px;
-  padding-bottom: 120px;
+}
+
+@media screen and (max-width: 1157px) {
+  .team-section {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .team-section {
+    padding: 120px 0;
+  }
 }
 
 .team-cards {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
+  gap: 72px;
   padding: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .team-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 64px;
+    column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .team__list {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+}
+
 .team-card {
+  max-width: 264px;
+  max-height: 428px;
   background-color: rgba(255, 255, 255, 1);
   text-align: center;
-  width: calc((100% - 72px) / 4);
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-  margin-right: 24px;
-  height: 428px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-card {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .team-card {
+    width: calc((100% - 72px) / 4);
+  }
 }
 
 .team-card:last-child {
@@ -350,18 +521,50 @@ img {
 
 .portfolio-section {
   background-color: white;
-  padding-top: 120px;
-  padding-bottom: 120px;
+}
+
+@media screen and (max-width: 1157px) {
+  .portfolio-section {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .portfolio-section {
+    padding: 120px 0;
+  }
 }
 
 .portfolio-cards {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
+  gap: 48px;
   padding: 0;
-  column-gap: 24px;
-  row-gap: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .portfolio-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 0;
+    column-gap: 24px;
+    row-gap: 48px;
+  }
 }
 
 .portfolio-card {
@@ -369,10 +572,21 @@ img {
   overflow: hidden;
   box-sizing: border-box;
   color: rgba(244, 244, 253, 1);
-  width: calc((100% - 48px) / 3);
   overflow: hidden;
   border: solid 1px rgba(231, 233, 252, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-card {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .portfolio-card {
+    width: calc((100% - 48px) / 3);
+  }
 }
 
 .portfolio-card:hover {
@@ -443,33 +657,75 @@ img {
   margin-top: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .text-sub {
+    text-align: center;
+    margin-top: 72px;
+  }
+}
+
 .footer-section {
-  display: flex;
   background-color: rgba(46, 47, 66, 1);
-  padding: 100px 0 100px;
+}
+
+@media screen and (max-width: 1157px) {
+  .footer-section {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-section {
+    display: flex;
+    padding: 100px 0 100px;
+  }
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: 156px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-container {
+    width: 552px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-container {
+    display: flex;
+    text-align: start;
+  }
 }
 
 .footer-info-part {
-  margin-right: 120px;
+  width: 264px;
+  margin: 0 auto;
 }
 
-.footer-social-part {
-  margin-right: 80px;
+@media screen and (min-width: 767px) {
+  .footer-info-part {
+    margin: 0 24px 0 0;
+    margin-bottom: 72px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-info-part {
+    margin-right: 120px;
+  }
 }
 
 .social-icons-footer {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 16px;
-  padding-left: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -541,11 +797,28 @@ img {
 
 .footer-sub-form {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 16px;
 }
+
+@media screen and (min-width: 768px) {
+  .footer-sub-form {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-sub {
+    margin-top: 0;
+    margin-left: 80px;
+  }
+}
+
 /* #endregion  */
 
-/* region modal */
+/* #region modal */
 
 .backdrop {
   position: fixed;
@@ -558,10 +831,10 @@ img {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .backdrop.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
-} */
+}
 
 .modal {
   position: absolute;
@@ -578,6 +851,12 @@ img {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 408px;
+  }
 }
 
 .modal-container {
@@ -623,6 +902,7 @@ img {
 }
 
 .modal-title {
+  display: block;
   font-family: inherit;
   text-align: center;
   color: rgba(46, 47, 66, 1);
@@ -790,4 +1070,175 @@ img {
   background-color: rgba(64, 75, 191, 1);
 }
 
-/* endregion */
+/* #endregion */
+
+/* #region mobile-menu */
+
+.mobile-menu-container.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button-open {
+    display: none;
+  }
+}
+
+.menu-button-open {
+  padding: 24px 0;
+  line-height: 0;
+  background-color: transparent;
+  border: none;
+  margin-left: auto;
+}
+
+.menu-button-open-icon {
+  fill: rgba(47, 47, 55, 1);
+}
+
+.mobile-menu-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(252, 252, 252, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-container.is-open {
+  visibility: visible;
+  pointer-events: auto;
+  transform: translateX(0);
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu-wrapper {
+    max-width: 428px;
+  }
+}
+
+.mobile-menu-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  background: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close:hover,
+.mobile-menu-close:focus {
+  background-color: rgba(64, 75, 191, 1);
+  border: none;
+}
+
+.mobile-menu-close-icon {
+  fill: rgba(46, 47, 66, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close-icon:hover,
+.mobile-menu-close-icon:focus {
+  fill: rgba(255, 255, 255, 1);
+}
+
+.mobile-menu-wrapper {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 80px 40px 40px 40px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto;
+}
+
+.mobile-menu-list {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  row-gap: 40px;
+  text-decoration: none;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.mobile-menu-nav {
+  color: rgba(46, 47, 66, 1);
+  font-family: inherit;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+.mobile-menu-nav:hover,
+.mobile-menu-nav:focus {
+  color: rgba(64, 75, 191, 1);
+}
+
+.mobile-menu-contacts {
+  margin-top: auto;
+  margin-bottom: 40px;
+}
+
+.mobile-menu-contacts-list {
+  margin-bottom: 48px;
+  list-style-type: none;
+  text-decoration: none;
+  padding: 0;
+}
+
+.mobile-menu-contacts-item:not(:last-child) {
+  margin-bottom: 48px;
+}
+
+.mobile-menu-contacts-tel {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: rgba(77, 90, 229, 1);
+  text-decoration: none;
+}
+
+.mobile-menu-contacts-mail {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: rgba(67, 68, 85, 1);
+  text-decoration: none;
+}
+
+.social-icons-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  padding: 0;
+  list-style-type: none;
+}
+
+.menu-icon-social {
+  width: 40px;
+  height: 40px;
+}
+/* #endregion */
