--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,16 @@ img {
   margin: 0 auto;
 }
 
+@media (min-resolution: 192dpi) {
+  .hero-section {
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+     url('../images/office-main@2x.jpg');
+  }
+}
+
 .hero-title {
   color: rgba(255, 255, 255, 1);
   font-size: 36px;
@@ -771,7 +781,7 @@ img {
   align-items: center;
   color: rgba(255, 255, 255, 1);
   background-color: rgba(77, 90, 229, 1);
-  min-width: 165px;
+  width: 165px;
   height: 40px;
   border-radius: 4px;
   font-family: inherit;
@@ -781,6 +791,7 @@ img {
   letter-spacing: 0.04em;
   border: none;
   padding-left: 24px;
+  margin: 0 auto;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1082,7 +1093,7 @@ img {
 @media screen and (min-width: 768px) {
   .menu-button-open {
     display: none;
-  }
+  }+
 }
 
 .menu-button-open {
